DPA-99:  Now doing double urlencoding on indvidual path names to get the expected result.